# ccx-api

./: .env-example  .gitignore  Cargo.toml  LICENSE-MIT  README.md
crates/binance-pay/: Cargo.toml
crates/binance-pay/examples/: certificates.rs  create_order.rs  transfer.rs
crates/binance-pay/src/: lib.rs
crates/binance-pay/src/api/: certificates_v1.rs  certificates_v2.rs  close_order_v1.rs  close_order_v2.rs  create_order_v1.rs  create_order_v2.rs  mod.rs  query_order_v1.rs  query_order_v2.rs  response.rs  submerchant_add_v1.rs  submerchant_modify_v1.rs  transfer_fund_v1.rs  transfer_fund_v2.rs  webhook.rs
crates/binance-pay/src/client/: config.rs  mod.rs  rest.rs
crates/binance-pay/src/dependency/: closure.rs  mod.rs
crates/binance-pay/src/error/: common_error.rs  mod.rs
crates/binance-pay/src/types/: certificate.rs  enums.rs  goods.rs  shipping.rs  time.rs
crates/ccx-api-lib/: Cargo.toml
crates/ccx-api-lib/src/: connector.rs  cred.rs  error.rs  lib.rs  seq.rs
crates/ccx-api-lib/src/client/: awc.rs  mod.rs  reqwest.rs
crates/ccx-api-lib/src/serde_util/: f64_arbitrary_precision.rs  mod.rs  none_as_empty_str.rs
crates/ccx-bitgo/: Cargo.toml
crates/ccx-bitgo/examples/: bank.rs  general.rs  trade.rs  transfer.rs  wallet.rs  ws_order_book.rs
crates/ccx-bitgo/src/: api.rs  client.rs  config.rs  error.rs  prelude.rs  proto.rs  rate_limiter.rs  types.rs
crates/ccx-bitgo/src/api/: bank.rs  error.rs  general.rs  trade.rs  transfer.rs  wallet.rs
crates/ccx-bitgo/src/api_ws/: order_book.rs  request.rs  response.rs
crates/ccx-bitgo/src/client/: conversion.rs  credential.rs  meta.rs  public.rs  ready.rs  signer.rs  stamped.rs  websocket.rs
crates/ccx-bitgo/src/types/: base_amount.rs  coin.rs  derive.rs  order.rs  product.rs  rate_limits.rs  transfer.rs  wallet.rs
crates/ccx-gate/: Cargo.toml
crates/ccx-gate/examples/: spot_account.rs  spot_currency.rs  spot_general.rs  spot_order.rs  spot_tickers.rs  wallet.rs  withdrawal.rs  ws_order_book.rs
crates/ccx-gate/src/: api.rs  api_ws.rs  client.rs  config.rs  error.rs  lib.rs  prelude.rs  proto.rs  rate_limiter.rs  types.rs  util.rs
crates/ccx-gate/src/api/: error.rs  spot.rs  wallet.rs
crates/ccx-gate/src/api_ws/: order_book.rs  request.rs  response.rs
crates/ccx-gate/src/client/: conversion.rs  credential.rs  meta.rs  public.rs  ready.rs  signer.rs  stamped.rs  websocket.rs
crates/ccx-gate/src/types/: rate_limits.rs  timestamp.rs
crates/ccx-lib/: Cargo.toml
crates/ccx-lib/src/: error.rs  http.rs  lib.rs  order_book.rs  rate_limiter.rs  websocket.rs
crates/ccx-lib/src/rate_limiter/: actor.rs  bucket.rs  error.rs  handle.rs  queue.rs  types.rs
crates/ccx-mexc/: Cargo.toml
crates/ccx-mexc/examples/: spot_account.rs  spot_general.rs  spot_market_data.rs  spot_trading.rs  wallet_coins.rs  wallet_deposit.rs  wallet_withdraw.rs
crates/ccx-mexc/src/: api.rs  client.rs  config.rs  error.rs  prelude.rs  proto.rs  rate_limiter.rs  types.rs
crates/ccx-mexc/src/api/: spot.rs  wallet.rs
crates/ccx-mexc/src/client/: credential.rs  meta.rs  public.rs  signed_ready.rs  signer.rs  stamped.rs  time_window.rs  websocket.rs
crates/ccx-mexc/src/types/: order.rs  rate_limits.rs  symbols.rs  timestamp.rs  ws_requests.rs  ws_stream_name.rs
crates/coinbase/: .env-example  Cargo.toml
crates/coinbase/examples/: prime-create_conversion.rs  websocket.rs
crates/coinbase/examples/util/: Cargo.toml
crates/coinbase/src/: error.rs  lib.rs
crates/coinbase/src/api/: mod.rs
crates/coinbase/src/client/: mod.rs
crates/coinbase/src/proto/: message.rs  mod.rs  subscribe.rs  ticker.rs
crates/coinbase/src/util/: dt_coinbase_ex.rs  maybe_str.rs  mod.rs
crates/gate/: Cargo.toml
crates/gate/examples/: spot.rs  wallet.rs
crates/gate/src/: error.rs  lib.rs  util.rs
crates/gate/src/api/: error.rs  mod.rs  request.rs  version.rs
crates/gate/src/client/: config.rs  mod.rs  rest.rs  signer.rs  websocket.rs
crates/gate/src/util/: maybe_str.rs
crates/gate/src/websocket/: mod.rs  order_book.rs  request.rs  response.rs
crates/gatepay/: Cargo.toml
crates/gatepay/examples/: common.rs
crates/gatepay/src/: lib.rs  macros.rs
crates/gatepay/src/api/: balance.rs  close_order.rs  create_order.rs  error.rs  mod.rs  order_status.rs
crates/gatepay/src/client/: config.rs  mod.rs  nonce.rs  rest.rs  signer.rs
crates/gatepay/src/notification/: biz_status.rs  biz_type.rs  mod.rs
crates/gatepay/src/util/: maybe_str.rs  mod.rs
crates/kraken/: Cargo.toml
crates/kraken/examples/: spot_market.rs  spot_stream.rs  spot_user.rs
crates/kraken/examples/util/: Cargo.toml
crates/kraken/src/: error.rs  lib.rs
crates/kraken/src/api/: mod.rs
crates/kraken/src/client/: config.rs  mod.rs  rate_limiter.rs  rest.rs  signer.rs  websocket.rs
crates/kraken/src/util/: mod.rs  order_book.rs
crates/legacy-ccx-api-lib/: Cargo.toml
crates/legacy-ccx-api-lib/src/: cred.rs  env.rs  env_logger_util.rs  error.rs  lib.rs  proxy.rs
crates/legacy-ccx-api-lib/src/client/: mod.rs
crates/legacy-ccx-api-lib/src/serde_util/: mod.rs  none_as_empty_str.rs
crates/mexc/: Cargo.toml
crates/mexc/examples/: spot_account.rs  spot_clearjunction.rs  spot_futures.rs  spot_general.rs  spot_market.rs  spot_stream.rs  spot_wallet.rs  usdtm_general.rs
crates/mexc/examples/util/: Cargo.toml
crates/mexc/src/: error.rs  lib.rs
crates/mexc/src/api/: mod.rs
crates/mexc/src/client/: config.rs  mod.rs  rate_limiter.rs  rest.rs  signer.rs  websocket.rs
crates/mexc/src/proto/: enums.rs  types.rs
crates/mexc/src/util/: order_book.rs
rust/: .env-example  .gitignore  .rustfmt.toml  Cargo.toml
rust/api/ccx-binance/: Cargo.toml  run.sh
rust/api/ccx-binance/examples/: account.rs  general.rs  ws_trades.rs
rust/api/ccx-binance/src/: config.rs
rust/api/ccx-lib/: Cargo.toml
rust/api/ccx-lib/src/: lib.rs  nice_num.rs
rust/ccx/: .env-example  .gitignore  Cargo.toml
rust/ccx/api/binance/: Cargo.toml
rust/ccx/api/binance-pay/: Cargo.toml
rust/ccx/api/bitstamp/: Cargo.toml
rust/ccx/api/gate/: Cargo.toml
rust/ccx/src/: lib.rs
(+1189 files in other folders)
