[package]
name = "ccx"
version.workspace = true
edition.workspace = true
authors.workspace = true

[workspace]
members = [
    "crates/*",
]

[workspace.package]
version = "0.6.0-dev.0"
authors = ["CCX-API Library developers <ccx-api@irbis-labs.com>"]
edition = "2021"

[features]
default = []
full = ["binance"]
binance = ["ccx-binance"]

[dependencies]
ccx-binance = { path = "crates/ccx-binance", optional = true }

[profile.dev.package."*"]
opt-level = 3
