[package]
name = "ccx"
version.workspace = true
edition.workspace = true
authors.workspace = true

[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.6.0-dev.0"
authors = ["CCX-API Library developers <ccx-api@irbis-labs.com>"]
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
bon = "3.3"
derive_more = { version = "2.0", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
serde_repr = "0.1"
smallvec = "1.14"
reqwest = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"

[features]
default = []
full = ["binance", "gate", "mexc"]
binance = ["dep:ccx-binance"]
gate = ["dep:ccx-gate"]
mexc = ["dep:ccx-mexc"]

[dependencies]
ccx-binance = { path = "crates/ccx-binance", optional = true }
ccx-gate = { path = "crates/ccx-gate", optional = true }
ccx-mexc = { path = "crates/ccx-mexc", optional = true }

[profile.dev.package."*"]
opt-level = 3
