[package]
name = "ccx"
version.workspace = true
edition.workspace = true
authors.workspace = true

[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.7.0"
authors = ["CCX-API Library developers <ccx-api@irbis-labs.com>"]
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
bon = "3.3"
chrono = "0.4"
derive_more = { version = "2.0", features = ["full"] }
futures = "0.3"
http = "1"
macro_rules_attribute = "0.2"
serde = { version = "1.0", features = ["derive"] }
# overwrite serde_json with package with better error description
serde_json = { package = "serde_json_path_to_error", version = "0.1" }
serde_html_form = "0.2"
serde_plain = "1.0"
serde_repr = "0.1"
serde_with = { version = "3.12", features = ["chrono_0_4"] }
similar-asserts = "1.7"
smallvec = { version = "1.14", features = ["serde"] }
smart-string = "0.1"
reqwest = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"

[features]
default = []
full = ["binance", "gate", "mexc"]
binance = ["dep:ccx-binance"]
gate = ["dep:ccx-gate"]
mexc = ["dep:ccx-mexc"]
kraken = ["dep:ccx-kraken"]

[dependencies]
ccx-binance = { path = "crates/ccx-binance", optional = true }
ccx-gate = { path = "crates/ccx-gate", optional = true }
ccx-mexc = { path = "crates/ccx-mexc", optional = true }
ccx-kraken = { path = "crates/ccx-kraken", optional = true }

[profile.dev.package."*"]
opt-level = 3
