[package]
name = "ccx-gate"
version.workspace = true
edition.workspace = true
authors.workspace = true

[features]
default = []

[dependencies]
ccx-lib = { path = "../ccx-lib", features = ["console_formatter", "websocket"] }
bon.workspace = true
derive_more.workspace = true
chrono = "0.4"
futures = "0.3"
hmac = "0.12"
http = "1"
reqwest = { version = "0.12", features = ["json"] }
rust_decimal = "1"
rust_decimal_macros = "1"
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
serde_path_to_error = { version = "0.1" }
serde_html_form.workspace = true
serde_repr.workspace = true
serde_with = { version = "3.12", features = ["chrono_0_4"] }
sha2 = "0.10.8"
soketto = "0.8"
smart-string = "0.1"
smallvec = { version = "1.14", features = ["serde"] }
strum = { version = "0.26", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["macros"] }
tokio-util = { version = "0.7", features = ["time", "compat"] }
tracing.workspace = true
url = "2"
url-macro = "0.1"
form_urlencoded = "1.2.1"
uuid = { version = "1.10.0", features = ["v4"] }
# TODO: unmaintained library
hex = "0.4.3"

[dev-dependencies]
dotenvy = "0.15"
envconfig = "0.11"
tokio = { version = "1", features = ["full"] }
tracing-subscriber.workspace = true
similar-asserts = "1.7"
