[package]
name = "ccx-mexc"
version.workspace = true
edition.workspace = true
authors.workspace = true

[features]
default = []

[dependencies]
ccx-lib = { path = "../ccx-lib", features = ["console_formatter", "websocket"] }

bon.workspace = true
chrono = "0.4"
derive_more.workspace = true
futures = "0.3"
hmac = "0.12"
http = "1"
reqwest = { version = "0.12", features = ["json"] }
rust_decimal = "1"
rust_decimal_macros = "1"
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
serde_repr.workspace = true
serde_urlencoded = "0.7.1"
sha2 = "0.10"
smallvec.workspace = true
smart-string = "0.1"
soketto = "0.8"
strum = { version = "0.26", features = ["derive"] }
thiserror = "2"
tracing.workspace = true
tokio = { version = "1", default-features = false, features = ["macros"] }
tokio-util = { version = "0.7", features = ["time", "compat"] }
url = "2"
url-macro = "0.1"
form_urlencoded = "1.2.1"
uuid = { version = "1.10.0", features = ["v4"] }

[dev-dependencies]
dotenvy = "0.15"
envconfig = "0.11"
tokio = { version = "1", features = ["full"] }
tracing-subscriber.workspace = true
