[package]
name = "ccx-coinbase"
version.workspace = true
edition.workspace = true
authors.workspace = true

[features]
default = ["with_network", "uuid1"]
with_network = [
    "actix",
    "actix-codec",
    "actix-http",
    "actix-rt",
    "actix-tls",
    "actix-web",
    "actix-web-actors",
    "awc",  # Still needed for WebSocket
    "reqwest",
    "rustls",
    "webpki-roots",
    "tokio",
    "ccx-api-lib/with_reqwest",
]
experimental = []
debug_headers = []
db = []

[dependencies]
actix = { version = "0.13", optional = true }
actix-codec = { version = "0.5", optional = true }
actix-http = { version = "3", optional = true, features = ["rustls"] }
actix-rt = { version = "2", optional = true }
actix-tls = { version = "3", optional = true }
actix-web = { version = "4", features = ["rustls"], optional = true }
actix-web-actors = { version = "4", optional = true }
awc = { version = "3", features = ["rustls"], optional = true }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
derive_more = { version = "2", features = ["full"] }
futures = "0.3"
hex = "0.4"
hmac = "0.12"
log = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "socks"], optional = true }
rust_decimal = "1"
rustls = { version = "0.20", optional = true }
webpki-roots = { version = "0.23", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
erased-serde = "0.3"
serde_urlencoded = "0.7"
sha2 = "0.10"
string_cache = "0.8"
thiserror = "1"
tokio = { version = "1", optional = true }
url = { version = "2", features = ["serde"] }
uuid08 = { package = "uuid", version = "0.8", optional = true, features = [
    "serde",
    "v4",
] }
uuid1 = { package = "uuid", version = "1", optional = true, features = [
    "serde",
    "v4",
] }
ccx-api-lib = { path = "../ccx-api-lib" }

[dev-dependencies]
env_logger = "0.11"
dotenv = "0.15"
ccx-api-lib = { path = "../ccx-api-lib", features = ["with_env_logger"] }
enum-iterator = "2.0.0"
serde_plain = "1"
