[package]
name = "ccx-gate"
version.workspace = true
edition.workspace = true
authors.workspace = true

[features]
default = ["with_network"]
with_network = [
    "actix",
    "awc",
    "actix-codec",
    "actix-http",
    "actix-rt",
    "actix-tls",
    "actix-web",
    "actix-web-actors",
    "ccx-api-lib/with_network",
]
with_diesel_1-4 = []

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
derive_more = { version = "2", features = ["full"]}
log = "0.4"
futures = "0.3"
hex = "0.4"
hmac = "0.12"
rand = "0.9"
rust_decimal = "1"
rust_decimal_macros = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
sha2 = "0.10"
smallvec = { version = "1", features = ["serde"] }
smart-string = "0.1.3"
thiserror = "2"
url = { version = "2", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }

ccx-api-lib = { path = "../ccx-api-lib" }
ref-cast = "1.0.23"
serde_with = { version = "3.9.0", features = ["chrono_0_4"] }
string_cache = "0.9"
actix = { version = "0.13", optional = true }
actix-codec = { version = "0.5", optional = true }
actix-http = { version = "3", optional = true, features = ["rustls"] }
actix-rt = { version = "2", optional = true }
actix-tls = { version = "3", optional = true }
actix-web = { version = "4", features = ["rustls"], optional = true }
actix-web-actors = { version = "4", optional = true }
awc = { version = "3", features = ["rustls-0_23"], optional = true }
serde_repr = "0.1.19"
displaydoc = "0.2.5"

[dev-dependencies]
actix-rt = "2"
dotenvy = "0.15"
env_logger = "0.11"
tokio = { version = "1", features = ["macros"] }
serde_plain = "1"
similar-asserts = "1.5.0"
serde_path_to_error = "0.1.16"
