[package]
name = "ccx-gatepay"
version.workspace = true
edition.workspace = true
authors.workspace = true

[features]
default = ["with_network"]
with_network = [
    "ccx-api-lib/with_network",
]
with_diesel = [
    "diesel",
    "diesel_derives",
]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
derive_more = { version = "2", features = ["full"]}
diesel = { version = "1", optional = true }
diesel_derives = { version = "1", optional = true }
log = "0.4"
futures = "0.3"
hex = "0.4"
hmac = "0.12"
rand = "0.8"
rust_decimal = "1"
rust_decimal_macros = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
smart-string = "0.1.3"
strum = { version = "0.25", features = ["derive"] }
thiserror = "1"
url = { version = "2", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }

ccx-api-lib = { path = "../ccx-api-lib" }

[dev-dependencies]
actix-rt = "2"
dotenvy = "0.15"
env_logger = "0.10"
tokio = { version = "1", features = ["macros"] }
serde_plain = "1"
