[package]
name = "ccx-kraken"
version.workspace = true
edition.workspace = true
authors.workspace = true

[features]
default = ["with_network"]
with_network = [
    "reqwest",
    "rustls",
    "webpki-roots",
    "tokio",
    "tokio-tungstenite",
    "ccx-api-lib/with_reqwest",
]
experimental = []

[dependencies]
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "socks"], optional = true }
rustls = { version = "0.23", features = ["aws-lc-rs"], optional = true }
webpki-roots = { version = "1", optional = true }
tokio = { version = "1", optional = true, features = ["full"] }
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-webpki-roots"], optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
log = "0.4"
futures = "0.3"
hmac = "0.12"
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
erased-serde = "0.4"
serde_urlencoded = "0.7"
sha2 = "0.10"
string_cache = "0.9"
thiserror = "2"
url = { version = "2", features = ["serde"] }

ccx-api-lib = { path = "../ccx-api-lib" }

[dev-dependencies]
env_logger = "0.11"
dotenv = "0.15"
ccx-kraken-examples-util = { path = "examples/util" }
