[package]
name = "ccx-api-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true

[features]
default = []
with_reqwest = [
    "reqwest",
    "tokio",
]
with_env_logger = [
    "chrono",
    "env_logger",
    "log",
]

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls", "socks"], optional = true }
base64 = "0.22"
bytes = "1.0"
chrono = { version = "0.4", optional = true }
env_logger = { version = "0.11", optional = true }
log = { version = "0.4", optional = true }
rust_decimal = "1"
rust_decimal_macros = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_html_form.workspace = true
string_cache = "0.9"
thiserror = "2"
tokio = { version = "1", optional = true, default-features = false }
url = { version = "2", features = ["serde"] }
