[package]
name = "ccx-mexc"
version.workspace = true
edition.workspace = true
authors.workspace = true

[features]
default = ["with_network"]
with_network = [
    "actix",
    "actix-codec",
    "actix-http",
    "actix-rt",
    "actix-tls",
    "actix-web",
    "actix-web-actors",
    "awc",
    "ccx-api-lib/with_network",
    "rustls",
    "webpki-roots",
]
experimental = []

[dependencies]
actix = { version = "0.13", optional = true }
actix-codec = { version = "0.5", optional = true }
actix-http = { version = "3", optional = true }
actix-rt = { version = "2", optional = true }
actix-tls = { version = "3", optional = true }
actix-web = { version = "4.0", features = ["rustls"], optional = true }
actix-web-actors = { version = "4.0", optional = true }
awc = { version = "3.0", optional = true, features = ["rustls"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
log = "0.4"
futures = "0.3"
hmac = "0.12"
rust_decimal = "1"
rustls = { version = "0.21", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
serde_urlencoded = "0.7"
erased-serde = "0.3"
sha2 = "0.10"
string_cache = "0.8"
thiserror = "1"
url = { version = "2", features = ["serde"] }
webpki-roots = { version = "0.25", optional = true }

ccx-api-lib = { path = "../ccx-api-lib" }

[dev-dependencies]
console = "0.15"
dotenv = "0.15"
env_logger = "0.11"
rust_decimal_macros = "1"
smart-string = "0.1.3"

ccx-mexc-examples-util = { path = "examples/util" }
