[package]
name = "ccx"
version = "0.1.0"
authors = ["Alexander Irbis <irbis.labs@gmail.com>", "Tima Ghostov <ghosty8707@mail.ru>"]
edition = "2018"
resolver = "2"

[workspace]
members = [
    "api/binance",
    "api/binance/examples/util",
    "api/kraken",
    "api/kraken/examples/util",
    "util/lib",
    "api/binance-pay",
]

[dependencies]
ccx-binance = { path = "api/binance" }
ccx-kraken = { path = "api/kraken" }
ccx-binance-pay = { path = "api/binance-pay" }
