[package]
name = "ccx-lib"
version = "0.6.0-dev.0"
authors = ["CCX-API Library developers <ccx-api@irbis-labs.com>"]
edition = "2021"

[features]
default = []
console_formatter = ["console"]

[dependencies]
console = { version = "0.15", optional = true }
rust_decimal = "1"
#serde = { version = "1.0", features = ["derive"] }
smart-string = "0.1"
#reqwest = { version = "0.12", features = ["json"] }
#url = "2"
