[package]
name = "ccx-coinbase-examples-util"
version = "0.1.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.ccx-coinbase]
path = "../.."

[dependencies]
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
