[package]
name = "ccx-binance-pay"
version = "0.4.0"
authors = ["CCX-API Library developers <irbis.labs@gmail.com>"]
edition = "2021"

[features]
default = ["with_network"]
with_network = [
    "actix",
    "actix-codec",
    "actix-http",
    "actix-rt",
    "actix-service",
    "actix-tls",
    "actix-web",
    "awc",
    "ccx-api-lib/with_network",
    "hex",
    "random-string",
    "rustls",
    "tokio-socks",
    "webpki-roots",
]
db = ["diesel", "diesel_derives"]
experimental = []

[dependencies]
actix = { version = "0.13", optional = true }
actix-codec = { version = "0.5", optional = true }
actix-http = { version = "3", optional = true }
actix-rt = { version = "2", optional = true }
actix-service = { version = "2", optional = true }
actix-tls = { version = "3.0", optional = true }
actix-web = { version = "4", features = ["rustls"], optional = true }
awc = { version = "3", optional = true }
chrono = { version = "0.4", default_features = false, features = ["clock"] }
diesel = { version = "1.4.5", features = ["postgres", "serde_json", "r2d2"], optional = true }
diesel_derives = { version = "1.4.1", optional = true }
dotenv = "0.15.0"
erased-serde = "0.3"
futures = "0.3"
hex = { version = "0.4.3", optional = true }
hmac = "0.12"
log = "0.4"
random-string = { version = "0.2", optional = true }
rust_decimal = "1"
rustls = { version = "0.20", optional = true }
slog-scope = "4.3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_plain = "0.3"
serde_urlencoded = "0.7"
sha2 = "0.10"
thiserror = "1"
tokio-socks = { version = "0.5", optional = true }
url = { version = "2", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
webpki-roots = { version = "0.22", optional = true }

ccx-api-lib = { path = "../../util/lib" }

[dev-dependencies]
env_logger = "0.10"
dotenv = "0.15"
ccx-binance-pay-examples-util = { path = "examples/util" }