[package]
name = "ccx-binance"
version = "0.1.0"
authors = ["Alexander Irbis <irbis.labs@gmail.com>"]
edition = "2018"

[dependencies]
awc = "2.0"
actix = "0.10"
actix-codec = "0.3"
actix-http = "2.0"
actix-web = { version = "3.0", features = ["rustls"] }
actix-web-actors = { version = "3.0" }
log = "0.4"
futures = "0.3"
rust_decimal = "1"
rustls = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
string_cache = "0.8"
thiserror = "1"
url = { version = "2", features = ["serde"] }
webpki-roots = "0.21"

[dev-dependencies]
actix-rt = "1.0"
env_logger = "0.8"
dotenv = "0.15"
