[package]
name = "ccx-coinbase"
version = "0.4.0"
authors = ["CCX-API Library developers <irbis.labs@gmail.com>"]
edition = "2021"

[features]
default = ["with_network", "uuid1"]
with_network = [
    "actix",
    "actix-codec",
    "actix-http",
    "actix-rt",
    "actix-tls",
    "actix-web",
    "actix-web-actors",
    "awc",
    "ccx-api-lib/with_network",
]
experimental = []
debug_headers = []
db = []

[dependencies]
actix = { version = "0.13", optional = true }
actix-codec = { version = "0.5", optional = true }
actix-http = { version = "3", optional = true, features = ["rustls"] }
actix-rt = { version = "2", optional = true }
actix-tls = { version = "3", optional = true }
actix-web = { version = "4", features = ["rustls"], optional = true }
actix-web-actors = { version = "4", optional = true }
awc = { version = "3", optional = true, features = ["rustls"] }
base64 = "0.21"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
derive_more = "0.99"
futures = "0.3"
hex = "0.4"
hmac = "0.12"
log = "0.4"
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
erased-serde = "0.3"
serde_urlencoded = "0.7"
sha2 = "0.10"
string_cache = "0.8"
thiserror = "1"
url = { version = "2", features = ["serde"] }
uuid08 = { package = "uuid", version = "0.8", optional = true, features = [
    "serde",
    "v4",
] }
uuid1 = { package = "uuid", version = "1", optional = true, features = [
    "serde",
    "v4",
] }
ccx-api-lib = { path = "../../util/lib" }

[dev-dependencies]
env_logger = "0.11"
dotenv = "0.15"
ccx-coinbase-examples-util = { path = "examples/util" }
enum-iterator = "2.0.0"
serde_plain = "1"
